[tool.poetry]
name = "pfuzz"
version = "0.1.0"
description = ""
authors = ["Artem Burashnikov <artem.burashnikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
hypothesis = "^6.100.1"
black = "^24.4.0"
ruff = "^0.3.7"
mypy = "^1.9.0"

[tool.ruff]
# Python >= 3.10
target-version = "py310"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
ignore = []

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests}/*" = ["E402"]

[[tool.mypy.overrides]]
module = "tomllib.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
